# auto-redact

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: main_auto-redact.yml
backend/: annotations.py  evaluation.py  main.py  processing.py  processing_ai.py  processing_ner.py  processing_ner_flair.py  processing_ner_spacy.py  processing_ner_stanza.py  pyproject.toml
backend/rules/: informationsfreiheitsgesetz.json
docs/: relevance.md
docs/relevance/: ifg_stats.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Sidebar.tsx  index.tsx  translations.ts
frontend/src/actions/: analyze.ts  download.ts  upload.ts
frontend/src/components/: DeleteButton.tsx  Disclaimer.tsx  FileUpload.tsx  IFGRulePopupSelector.tsx  IFGRuleSelector.tsx  LanguageSelector.tsx  PromptInput.tsx  RedactionHints.tsx  SidebarFooter.tsx  SidebarHighlight.tsx  SidebarHighlightsList.tsx  Spinner.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Select.tsx  Tooltip.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/style/: App.css  index.css  theme.ts
frontend/src/types/: highlights.ts
rules/: informationsfreiheitsgesetz.json  informationsfreiheitsgesetz.md
