[project]
name = "backend"
version = "0.1.0"
description = "AI-powered PDF redaction tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "litellm>=1.52.0",
    "pymupdf>=1.25.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
]
