[project]
name = "backend"
version = "0.1.0"
description = "AI-powered PDF redaction tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "langdetect>=1.0.9",
    "litellm>=1.52.0",
    "pip>=25.0.1",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "rich>=14.0.0",
    "spacy>=3.8.5",
    "uvicorn>=0.32.0",
]
